code/lib/codemod/src/transforms/__tests__/__snapshots__/upgrade-deprecated-types.test.ts.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`upgrade-deprecated-types > typescript > upgrade imports with conflicting local names 1`] = `
SyntaxError: This codemod does not support local imports that are called the same as a storybook import.
Rename this local import and try again.
> 1 |  import { ComponentMeta as Meta, ComponentStory as StoryFn } from '@storybook/react';
    |           ^^^^^^^^^^^^^^^^^^^^^
  2 |  import { Cat } from './Cat';
  3 |    
  4 |  const meta = { title: 'Cat', component: Cat } satisfies Meta<typeof Cat>
`;

exports[`upgrade-deprecated-types > typescript > upgrade imports with local names 1`] = `
import {
  StoryFn as Story_,
  Meta as ComponentMeta_,
  StoryObj as ComponentStoryObj_,
} from '@storybook/react';
import { Cat } from './Cat';

const meta = { title: 'Cat', component: Cat } satisfies ComponentMeta_<typeof Cat>;
const meta2: ComponentMeta_<typeof Cat> = { title: 'Cat', component: Cat };
export default meta;

export const A: Story__<typeof Cat> = (args) => <Cat {...args} />;
export const B: any = (args) => <Button {...args} />;
export const C: StoryFn_<typeof Cat> = (args) => <Cat {...args} />;
export const D: ComponentStoryObj_<typeof Cat> = {
  args: {
    name: 'Fluffy',
  },
};
export const E: Story_<CatProps> = (args) => <Cat {...args} />;
`;

exports[`upgrade-deprecated-types > typescript > upgrade namespaces 1`] = `
import * as SB from '@storybook/react';
import { Cat, CatProps } from './Cat';

const meta = { title: 'Cat', component: Cat } satisfies SB.Meta<typeof Cat>;
const meta2: SB.Meta<typeof Cat> = { title: 'Cat', component: Cat };
export default meta;

export const A: SB.StoryFn<typeof Cat> = (args) => <Cat {...args} />;
export const B: any = (args) => <Button {...args} />;
export const C: SB.StoryFn<typeof Cat> = (args) => <Cat {...args} />;
export const D: SB.StoryObj<typeof Cat> = {
  args: {
    name: 'Fluffy',
  },
};
export const E: SB.StoryFn<CatProps> = (args) => <Cat {...args} />;
`;

exports[`upgrade-deprecated-types > typescript > upgrade regular imports 1`] = `
import { StoryFn, Meta, StoryObj } from '@storybook/react';
import { Cat, CatProps } from './Cat';

const meta = { title: 'Cat', component: Cat } satisfies Meta<typeof Cat>;
const meta2: Meta<CatProps> = { title: 'Cat', component: Cat };
export default meta;

export const A: StoryFn<typeof Cat> = (args) => <Cat {...args} />;
export const B: any = (args) => <Button {...args} />;
export const C: StoryFn<typeof Cat> = (args) => <Cat {...args} />;
export const D: StoryObj<typeof Cat> = {
  args: {
    name: 'Fluffy',
  },
};
export const E: StoryFn<CatProps> = (args) => <Cat {...args} />;
`;
